# careerfit

./: .gitattributes  .gitignore  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: scoring_rules.md  technical_design.md  test_result.txt  user_guide.md
examples/: input_jd_only.txt  input_match_analysis.txt  input_recruiter_eval.txt  input_resume_only.txt  jd_sample_1.txt  output_match_report.md  resume_sample_1.txt
scripts/: package_skill.py  package_skill.sh  validate_skill.py
src/: config.py  main.py  router.py
src/data/: capability_registry.json  job_family_map.json  prompt_registry.json  risk_rules.json  scoring_strategy.json  semantic_match_rules.json  skill_alias_map.json  skill_taxonomy.json
src/prompts/: evidence_matcher.md  evidence_reasoning_enhance.md  input_classifier.md  interview_generator.md  jd_parse_enhance.md  jd_parser.md  report_generator.md  report_polish.md  resume_optimizer.md  resume_parse_enhance.md  resume_parser.md  score_engine.md
src/schemas/: models.py
src/services/: evidence_matcher.py  input_classifier.py  interview_generator.py  jd_parser.py  learning_path_generator.py  llm_client.py  llm_enhancer.py  (+9 more)
tests/: test_classifier.py  test_delivery_format.py  test_empty_input.py  test_input_robustness.py  test_jd_only.py  test_job_families.py  test_match_scenarios.py  test_mixed_language.py  test_pipeline.py  test_resume_jd_match.py  test_resume_only.py  test_safety.py  test_score_integrity.py  test_sensitive_info.py  test_skill_taxonomy.py
