[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "careerfit-evidence"
version = "1.0.0"
description = "简历-JD证据链匹配与求职提升助手"
requires-python = ">=3.10"
keywords = ["resume", "recruitment", "career", "job-matching", "interview"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
